# simple_version

./: .gitignore  Cargo.toml  README.md  version.json
src/: main.rs  objs.rs
